--- a/themes/tokyo-night.user.css
+++ b/themes/tokyo-night.user.css
@@ -53,17 +53,17 @@
   --header-secondary: var(--text-muted);
 
   /*  Text Color  */
-  --text-normal: #b1bae6;
-  --text-muted: #565f89;
-  --interactive-normal: #5f647e;
+  --text-normal: #b1e6c9;
+  --text-muted: #568962;
+  --interactive-normal: #5f7e62;
   --interactive-hover: #a2a6c2;
-  --interactive-active: #b5bad1;
-  --interactive-muted: #55576b;
+  --interactive-active: #b5d1be;
+  --interactive-muted: #556b5b;
 
   /* Background Color */
-  --background-primary: #1a1b26;
-  --background-secondary: #171722;
-  --background-secondary-alt: #13131a;
+  --background-primary: #1a2620;
+  --background-secondary: #17221b;
+  --background-secondary-alt: #131a16;
   --background-tertiary: #16161e;
   --background-tertiary-alt: var(--background-secondary-alt);
   --background-accent: #434461;
@@ -71,11 +71,11 @@
   --background-modifier-hover: #212331c0;
   --background-modifier-active: #282a3680;
   --background-modifier-selected: #24263171;
-  --background-modifier-accent: #1e1e29;
-  --background-mentioned: #252836;
-  --border-mentioned: #474c64;
-  --background-mentioned-hover: #2f3344;
-  --accent-color: #7aa2f7;
+  --background-modifier-accent: #1e291e;
+  --background-mentioned: #25362a;
+  --border-mentioned: #47644c;
+  --background-mentioned-hover: #2f4434;
+  --accent-color: #7af796;
 
   /* Folder Color */
   --folder-color: #202332d0;
@@ -105,11 +105,11 @@
   --header-secondary: var(--text-muted);
 
   /* Text Color */
-  --text-normal: #2e3338;
-  --text-muted: #747f8d;
-  --interactive-normal: #4c505e;
+  --text-normal: #2e3831;
+  --text-muted: #748d7e;
+  --interactive-normal: #4c5e51;
   --interactive-hover: #404350;
-  --interactive-active: #373a44;
+  --interactive-active: #37443a;
   --interactive-muted: #77797c;
 
   /* Background Color */
